welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: reassignment to val
				return isFacingTrail=true
                                                    ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
				avance()
                                      ^