welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

	avance()
	getCouleurSol()
		
			if (getCouleurSol()==Color.green)
			{
				return isFacingTrail=true
			} else {
				avance()
		}
	}
	
          
